buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
    }
}

plugins {
    id 'java'
    id "maven-publish"
}

sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

group 'com.unrealdinnerbone'

def ENV = System.getenv()
def buildNumber = ENV.GITHUB_RUN_NUMBER ? "${ENV.GITHUB_RUN_NUMBER}" : "0"
version = project.getProperty("version") + ("+build." + buildNumber).replace("\\", "")

repositories {
    mavenCentral()
    jcenter()
    maven {
        name = "The Name"
        url = "https://jitpack.io"
    }
}

dependencies {

    compile group: 'com.google.guava', name: 'guava', version: 'r05'
    compile "org.reflections:reflections:0.9.12"

    compile "org.fusesource.jansi:jansi:1.11"
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile "org.apache.commons:commons-compress:1.10"
    compile "org.apache.commons:commons-lang3:3.7"
    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
    compile "org.apache.httpcomponents:httpclient:4.5.9"

    compile "com.beust:jcommander:1.72"

    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.28'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    implementation "org.projectlombok:lombok:1.18.2"
    annotationProcessor "org.projectlombok:lombok:1.18.2"

    testCompile group: 'junit', name: 'junit', version: '4.12'
}


publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            version = project.getProperty("version")
        }
    }

    repositories {
        maven {
            url "https://maven.unreal.codes/repository/unreal/"
            credentials {
                username ENV.MAVEN_USERNAME
                password ENV.MAVEN_PASSWORD
            }

        }
    }
}

